--- a/e-kart/style.css
+++ b/e-kart/style.css
@@ -1,6 +1,10 @@
+@import url('https://fonts.googleapis.com/css2?family=Patrick+Hand&display=swap');
+
 *{
     margin: 0;
     padding: 0;
+    font-family: 'Patrick Hand', cursive;
+
 }
 
 
@@ -22,6 +26,7 @@
 #header{
     text-align: center;
     color:rgb(189, 134, 143);
+    margin-top: 20px;
 }
 
 .image{
@@ -54,13 +59,16 @@
 
 .desc{
     font-size: 18px;
-    weight: bolder;
+    font-weight: bolder;
+    margin-top: 20px;
+    margin-bottom: 20px;
 }
 
 .anchor-tab{
 
     text-decoration: none;
     color:rgb(189, 134, 143);
+    
 }
 
 .words{
@@ -72,3 +80,28 @@
     background-color:rgb(248, 213, 219)
 }
 
+
+
+
+
+
+.Form{
+text-align: center;
+color: rgb(189, 134, 143);
+
+
+}
+
+.contact{
+margin-bottom: 90px;
+padding-bottom: 20px;
+color: rgb(189, 134, 143);
+
+}
+
+.goBack{
+text-decoration: none;
+background-color: pink;
+color: rgb(189, 134, 143);
+
+}
