--- a/bootstrap.css
+++ b/bootstrap.css
@@ -8,6 +8,8 @@
     text-decoration: none;
     font-size: 15px;
     margin-left: 10px;
+    color: rgb(87, 131, 164);
+    font-weight: 500;
 }
 
 
