--- a/Fanta/fanta.css
+++ b/Fanta/fanta.css
@@ -1,15 +1,19 @@
+@import url("https://fonts.googleapis.com/css2?family=Bebas+Neue&family=Patrick+Hand&display=swap");
 
-#logo{
-    width: 100px;
-    height: 60px;
-    margin-left: 21px;
-    margin-top:10px;
+*{
+    margin: 0;
+    padding: 0;
+    font-family: 'Bebas Neue', sans-serif;
+
 }
+
+
+
 
 #profileIcon{
     width: 25px;
     height: 25px;
-    margin-left: 970px;
+    margin-left: 1010px;
 
     
 }
@@ -19,9 +23,26 @@
     font-weight: 700;
     margin-left: 90px;
     /* margin-top: -100px; */
-    color: rgb(41, 41, 157);
+    color: #1947BA;;
+    text-decoration: none;
+    font-weight: 500;
+    display: inline;
+}
+
+#logo{
+    width: 100px;
+    height: 50px;
+    margin-left: 30px;
 }
 
 .fantaa{
-    background-color: orange;
+    background-color: #fe9728;
+    height: 90px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
+.body{
+    background-image: url("images/background.png");
 }
