--- a/Fanta/fanta.css
+++ b/Fanta/fanta.css
@@ -23,20 +23,22 @@
     font-weight: 700;
     margin-left: 90px;
     /* margin-top: -100px; */
-    color: #1947BA;;
+    color: #1947BA;
     text-decoration: none;
     font-weight: 500;
     display: inline;
+    
 }
 
 #logo{
     width: 100px;
     height: 50px;
-    margin-left: 30px;
+    margin-left: 25px;
+    cursor: pointer;
 }
 
 .fantaa{
-    background-color: #fe9728;
+    background-color: #ff961d;
     height: 90px;
     display: flex;
     justify-content: center;
@@ -45,4 +47,10 @@
 
 .body{
     background-image: url("images/background.png");
+}
+
+.productA:hover{
+    border-bottom: 5px solid #1947BA;
+    cursor: pointer;
+       
 }
