--- a/Netflix/style.css
+++ b/Netflix/style.css
@@ -1,8 +1,4 @@
 *{
-/* background-image: url("https://assets.nflxext.com/ffe/siteui/vlv3/5eab1b22-c5ea-48b0-8ef4-862b3fa6df2c/41eaebdf-5de5-4e41-9e1f-cbf140f2dcbb/US-en-20230724-popsignuptwoweeks-perspective_alpha_website_large.jpg"); */
-    background-color: black;
-    opacity: 1.5;
-    /* position: relative; */
     font-family: sans-serif;
 
     
@@ -12,7 +8,7 @@
    /* position: absolute; */
     color: white;
     text-align: center;
-    margin-top: 220px;
+    margin-top: 190px;
     font-size: 50px;
     font-weight: 700;
 
@@ -40,7 +36,7 @@
     color: white;
     background-color: #E50914;
     font-size: 17px;
-    margin-left: 1400px;
+    margin-left: 1280px;
     border: 2px solid red;
     border-radius: 5%;
     padding: 6px;
@@ -50,7 +46,7 @@
 
 
 #logo{
-    margin-left: 190px;
+    margin-left: 180px;
     margin-top: 16px;
     display: inline-block;
 }
@@ -70,11 +66,13 @@
 
 .form-select{
     color: white;
-    font-size: 20px;
+    font-size: 15px;
     width: 150px;
-    height: 40px;
-    border-radius: 7%;
-    margin-left: 870px;
+    height: 35px;
+    border-radius: 5%;
+    margin-left: 760px;
+    background-color: black;
+    
 }
 
 .form-control{
@@ -82,6 +80,13 @@
     font-size: 19px;
     width: 320px;
     height: 50px;
-    border-radius: 7%;
+    border-radius: 5%;
     margin-left: 590px;
+    background-color: black;
+}
+
+.body{
+    background-image: linear-gradient(to top, 
+    #00000000, #000000c9), linear-gradient(to bottom, 
+    #00000000, #000000c9), url("images/netflix.jpg");
 }
