--- a/Netflix/style.css
+++ b/Netflix/style.css
@@ -27,7 +27,7 @@
     color: white;
     text-align: center;
     font-size: 22px;
-    margin-top: 33px;
+    margin-top: 30px;
     
 }
 
@@ -35,19 +35,22 @@
 .button_SignIn{
     color: white;
     background-color: #E50914;
-    font-size: 17px;
-    margin-left: 1280px;
+    font-size: 14px;
+    margin-left: 25px;
     border: 2px solid red;
     border-radius: 5%;
     padding: 6px;
-    width: 85px;
-    margin-top: -190px;
+    padding-bottom: 20px;
+    width: 75px;
+    height: 30px;
+    padding-bottom: 22px;
 }
 
 
 #logo{
-    margin-left: 180px;
-    margin-top: 16px;
+    margin-left: 15px;
+    margin-top: -4px;
+    width: 150px;
     display: inline-block;
 }
 
@@ -56,11 +59,12 @@
     color: white;
     background-color: #E50914;
     font-size: 27px;
-    margin-left: 947px;
+    margin-left: 10px;
     border: 2px solid #E50914;
     border-radius: 5%;
     padding: 14px;
     width: 220px;
+    height: 60px;
 }
 
 
@@ -70,7 +74,7 @@
     width: 150px;
     height: 35px;
     border-radius: 5%;
-    margin-left: 760px;
+    margin-left: 820px;
     background-color: black;
     
 }
@@ -78,10 +82,9 @@
 .form-control{
     color: white;
     font-size: 19px;
-    width: 320px;
+    width: 400px;
     height: 50px;
     border-radius: 5%;
-    margin-left: 590px;
     background-color: black;
 }
 
@@ -89,4 +92,17 @@
     background-image: linear-gradient(to top, 
     #00000000, #000000c9), linear-gradient(to bottom, 
     #00000000, #000000c9), url("images/netflix.jpg");
+}
+
+.navbar{
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
+
+.email_start{
+    display: flex;
+    justify-content: center;
+    align-items: center;
 }
