--- a/Netflix/style.css
+++ b/Netflix/style.css
@@ -44,11 +44,12 @@
     width: 75px;
     height: 30px;
     padding-bottom: 22px;
+    margin-right: 200px;
 }
 
 
 #logo{
-    margin-left: 15px;
+    margin-left: 80px;
     margin-top: -4px;
     width: 150px;
     display: inline-block;
@@ -71,11 +72,11 @@
 .form-select{
     color: white;
     font-size: 15px;
-    width: 150px;
+    width: 160px;
     height: 35px;
     border-radius: 5%;
-    margin-left: 820px;
-    background-color: black;
+    margin-left: 785px;
+    background-color: transparent;
     
 }
 
@@ -84,8 +85,10 @@
     font-size: 19px;
     width: 400px;
     height: 50px;
-    border-radius: 5%;
-    background-color: black;
+    border-radius: 4%;
+    background-color: transparent;
+    border: 1px solid rgba(128, 128, 128, 0.834);
+
 }
 
 .body{
